MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/signature__TemplateSection__c.object-meta.xml
<CustomObject>
    <description>Simple Signature PDF Template Sections</description>
    <label>ß Template Section</label>
    <nameField>
        <displayFormat>TS{0000}</displayFormat>
        <label>TS#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>