MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Active__c.field-meta.xml
<CustomField>
    <fullName>signature__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>