MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>signature__Background_Color__c</fullName>
    <label>Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>