MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Body__c.field-meta.xml
<CustomField>
    <fullName>signature__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>