MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Description__c.field-meta.xml
<CustomField>
    <fullName>signature__Description__c</fullName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>