MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Horizontal_Order__c.field-meta.xml
<CustomField>
    <fullName>signature__Horizontal_Order__c</fullName>
    <label>Horizontal Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>