MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__IsHorizontal__c.field-meta.xml
<CustomField>
    <fullName>signature__IsHorizontal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHorizontal</label>
    <type>Checkbox</type>
</CustomField>