MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__PageBreak__c.field-meta.xml
<CustomField>
    <fullName>signature__PageBreak__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Page Break</label>
    <type>Checkbox</type>
</CustomField>