MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Template__c.field-meta.xml
<CustomField>
    <fullName>signature__Template__c</fullName>
    <label>Template</label>
    <referenceTo>signature__Template__c</referenceTo>
    <relationshipName>Template_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>