MyDemoOrg/force-app/main/default/objects/signature__TemplateSection__c/fields/signature__Type__c.field-meta.xml
<CustomField>
    <fullName>signature__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>User Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>